新增音乐，分割线组件

--- a/src/assets/scss/font.scss
+++ b/src/assets/scss/font.scss
@@ -142,6 +142,11 @@
     content: $icon-music; 
   }
 }
+.icon-music2 {
+  &:before {
+    content: $icon-music2; 
+  }
+}
 .icon-align-right {
   &:before {
     content: $icon-align-right; 
