--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,6 +1,7 @@
 $icomoon-font-family: "icomoon" !default;
 $icomoon-font-path: "assets/fonts" !default;
 
+$icon-music2: "\e919";
 $icon-copy: "\e900";
 $icon-image: "\e901";
 $icon-redo: "\e902";
