--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,6 +1,9 @@
 $icomoon-font-family: "icomoon" !default;
-$icomoon-font-path: "assets/fonts" !default;
+$icomoon-font-path: "../assets/fonts" !default;
 
+$icon-x-center: "\e91a";
+$icon-fill: "\e91b";
+$icon-y-center: "\e91c";
 $icon-music2: "\e919";
 $icon-copy: "\e900";
 $icon-image: "\e901";
