--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,15 +1,4 @@
-@import "font";
-
-html, body {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    font-size: 20px;
-}
-body {
-    margin: 0;
-    display: flex;
-}
+@import "variables";
 
 .el-tabs .el-tabs__header {
     border-bottom-color: $chigh !important;
