--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,6 +1,11 @@
 $icomoon-font-family: "icomoon" !default;
 $icomoon-font-path: "../assets/fonts" !default;
 
+$icon-custom: "\e921";
+$icon-qr: "\e91d";
+$icon-script: "\e91e";
+$icon-rain: "\e91f";
+$icon-snow: "\e920";
 $icon-x-center: "\e91a";
 $icon-fill: "\e91b";
 $icon-y-center: "\e91c";
